# jewelryai

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
apps/backend/: README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: router.py
apps/backend/app/core/: config.py  logging.py
apps/backend/app/domain/: benchmark.py  export.py  ring.py  sketch.py
apps/backend/app/services/: component_catalog.py  component_library.py  component_visual_index.py  export_service.py  pricing_service.py  prompt_interpreter.py  ring_service.py  sketch_component_resolver.py  sketch_component_resolver_vision.py  sketch_service.py
apps/backend/artifacts/0031ab37-538f-4fa4-b640-c992b500ec74/: model.glb
apps/backend/artifacts/01675803-ecb9-40a7-b983-f5a6ef948b6a/: model.stl
apps/backend/artifacts/02d996b0-8d4b-4da5-bb6b-e7358fbf0317/: model.glb  model.stl
apps/backend/artifacts/047b41fc-8004-494c-b262-4a31892ce7fb/: model.glb
apps/backend/artifacts/06a9d5fc-b911-43fd-a2bc-e9556d52606f/: model.glb
apps/backend/scripts/: bootstrap_demo_component_assets.py  component_catalog_audit.py  fetch_component_assets.py
apps/backend/tests/: test_benchmarks.py  test_component_catalog.py  test_component_library.py  test_component_visual_index.py  test_exports.py  test_grounded_sam_analyzer.py  test_groundingdino_adapter_utils.py  test_health.py  test_pricing_service.py  test_rings.py  test_sketch_analysis_provider.py  test_sketch_component_resolver.py  test_sketch_component_resolver_vision.py  test_sketches.py  test_variations.py
(+235 files in other folders)
